load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/nilebox/broker-storage-postgres/example/server",
    visibility = ["//visibility:public"],
    deps = [
        "//example/broker:go_default_library",
        "//pkg/storage:go_default_library",
        "//vendor/github.com/nilebox/broker-server/pkg/server:go_default_library",
        "//vendor/github.com/nilebox/broker-server/pkg/stateful:go_default_library",
        "//vendor/github.com/nilebox/broker-server/pkg/stateful/retry:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
